udpated about para and commented out live demo button

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                     <p>
                         Currently preparing for the Graduate Aptitude Test in Engineering (GATE),
                         & passionately delving into Java EE and web development.
-                         I am a dedicated tech enthusiast with a voracious appetite for learning 
+                         I am a dedicated tech enthusiast with an appetite for learning 
                         across various domains, including AI, machine learning, Mobile App Dev, Networking and cryptography.
-                         My insatiable curiosity drives me to delve into new technologies, 
+                         My curiosity drives me to delve into new technologies, 
                         constantly seeking to expand my knowledge and skills.
                     </p>
                 </div>
@@ -280,11 +280,11 @@
                         onclick="location.href='https://github.com/sagarpjpt/Game-Galaxy'">
                         GitHub
                         </button>
-                        <button 
+                        <!-- <button 
                         class="btn btn-color-2 project-btn" 
                         onclick="location.href='https://github.com/'">
                         Live Demo
-                        </button>
+                        </button> -->
                     </div>
                 </div>
                 <div class="details-container color-container">
@@ -296,14 +296,14 @@
                     <div class="btn-container">
                         <button 
                         class="btn btn-color-2 project-btn" 
-                        onclick="location.href='https://github.com/sagarpjpt'">
+                        onclick="location.href='https://github.com/sagarpjpt/Spotify-Clone'">
                         GitHub
                         </button>
-                        <button 
+                        <!-- <button 
                         class="btn btn-color-2 project-btn" 
                         onclick="location.href='https://github.com/'">
                         Live Demo
-                        </button>
+                        </button> -->
                     </div>
                 </div>
                 <div class="details-container color-container">
@@ -318,11 +318,11 @@
                         onclick="location.href='https://github.com/sagarpjpt/flight-ticket-booking'">
                         GitHub
                         </button>
-                        <button 
+                        <!-- <button 
                         class="btn btn-color-2 project-btn" 
                         onclick="location.href='https://github.com/'">
                         Live Demo
-                        </button>
+                        </button> -->
                     </div>
                 </div>
             </div>
@@ -364,7 +364,7 @@
                 </ul>
             </div>
         </nav>
-        <p>Copyright &#169; 2024 Shivam Prajapati. All Rights Reserved</p>
+        <p>Copyright &#169; 2024 Shivam Prajapati.</p>
     </footer>
 
     <script src="script.js"></script>
