--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             >
                             <div>
                                 <h3>JavaScript</h3>
-                                <p>Experienced</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
@@ -152,7 +152,7 @@
                             >
                             <div>
                                 <h3>React JS</h3>
-                                <p>Experienced</p>
+                                <p>Beginner</p>
                             </div>
                         </article>
                         <article>
@@ -161,7 +161,7 @@
                             >
                             <div>
                                 <h3>Node Js</h3>
-                                <p>Experienced</p>
+                                <p>Beginner   </p>
                             </div>
                         </article>
                         <article>
@@ -170,7 +170,7 @@
                             >
                             <div>
                                 <h3>Express JS</h3>
-                                <p>Experienced</p>
+                                <p>Beginner   </p>
                             </div>
                         </article>
 
@@ -195,7 +195,7 @@
                             >
                             <div>
                                 <h3>JavaScript</h3>
-                                <p>Experienced</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
@@ -222,7 +222,7 @@
                             >
                             <div>
                                 <h3>JavaFX</h3>
-                                <p>Experienced</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
@@ -240,7 +240,7 @@
                             >
                             <div>
                                 <h3>JSP</h3>
-                                <p>Experienced</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
