--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="text-container">
                     <p>
                         Currently preparing for the Graduate Aptitude Test in Engineering (GATE),
-                        & passionately delving into Java EE and web development.
+                        & learning Java EE and web development.
                          I am a dedicated tech enthusiast with an appetite for learning 
                         across various domains, including AI, machine learning, Mobile App Dev, Networking and cryptography.
                          My curiosity drives me to delve into new technologies, 
