--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="profile">
         
         <div class="section_pic_container">
-            <img src="./assets/profile-pic-2.jpg" alt="Shivam Profile Pic">
+            <img src="./assets/profile-pic-1-copy.jpg" alt="Shivam Profile Pic">
         </div>
         
         <div class="section_text">
