updated my resume to the latest one and updated prof. summary

--- a/index.html
+++ b/index.html
@@ -97,12 +97,10 @@
                 </div>
                 <div class="text-container">
                     <p>
-                        Currently preparing for the Graduate Aptitude Test in Engineering (GATE),
-                        & learning Java EE and web development.
-                         I am a dedicated tech enthusiast with an appetite for learning 
-                        across various domains, including AI, machine learning, Mobile App Dev, Networking and cryptography.
-                         My curiosity drives me to delve into new technologies, 
-                        constantly seeking to expand my knowledge and skills.
+                        Motivated and detail-oriented Web Developer & Java Developer with hands-on experience in full-stack development, 
+                        frontend design, and backend integration. Proficient in Java, React.js, JavaScript, and SQL, with a strong background in developing 
+                        responsive web applications and scalable software solutions. Scored <b>38.38 in GATE 2025 </b>(Computer Science), demonstrating strong problem-solving and analytical skills. 
+                        Passionate about learning new technologies
                     </p>
                 </div>
             </div>
